[package]
name = "wgpu_almas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.10.0", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0.58"
image = "0.24.3"
rand = "0.8.5"
lazy_static = "1.4.0"
